--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,11 +3,11 @@
 
 	<div class="frosty col-xs-10 col-xs-offset-1 text-center">
 		<br />
-		<h1>shtuff</h1>
+		<h1>Course Title goes here</h1>
 		<br />
-		<h2>more shtuff</h2>
+		<h2>description of course here</h2>
 		<br />
-		<%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+		<%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
 		<br /><br />
 	</div>
 
