--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -70,6 +70,30 @@
 	margin: 10px;
 }
 
+.lesson {
+	background-color: black;
+	margin-top: 10px;
+	height: 130px;
+}
+
+.lesson a {
+	color: white;
+	font-family: "Helvetica Neue", Helvetica;
+	font-weight: 100;
+	font-size: 15px;
+}
+
+.lesson a b {
+	font-weight: 100;
+	font-size: 25px;
+}
+
+.section {
+	border: 1px solid;
+	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+	padding: 20px;
+}
+
 body {
 	background: url('polaroid.png');
 	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
