--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,3 +1,30 @@
+<script>
+	$(function() {
+		$('.lessons').sortable({
+			update: function( event, ui ) {
+				$.ajax({
+					type: 'PUT',
+					url: ui.item.data('update-url'),
+					dataType: 'json',
+					data: { lesson: { row_order_position: ui.item.index() } }
+				});
+			}
+		});
+	});
+	$(function() {
+		$('.sections').sortable({
+			update: function( event, ui ) {
+				$.ajax({
+					type: 'PUT',
+					url: ui.item.data('update-url'),
+					dataType: 'json',
+					data: { section: { row_order_position: ui.item.index() } }
+				});
+			}
+		});
+	});
+</script>
+
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
 	<h1 class="text-center"><%= current_course.title %></h1>
@@ -10,23 +37,23 @@
 		<%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
 	</div>
 
-	<ul>
-		<% current_course.sections.each do |section| %>
-			<li>
+	<ul class="sections">
+		<% current_course.sections.rank(:row_order).each do |section| %>
+			<li data-update-url="<%= instructor_section_path(section) %>">
 				<%= section.title %>
 				<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-primary btn-xs' %>
-				<ul>
+				<ul class="lessons">
 					<% section.lessons.rank(:row_order).each do |lesson| %>
-						<li>
+						<li data-update-url="<%= instructor_lesson_path(lesson) %>">
 							<b><%= lesson.title %></b>
 							-
 							<%= lesson.subtitle %>
 						</li>
 					<% end %>
 				</ul>
-				<br class="clr" />
+				
 			</li>
 		<% end %>
 	</ul>
-
+	<br class="clr" />
 </div>
