--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -16,7 +16,7 @@
 			<%= link_to "More Info...", course_path(course), class: 'btn btn-lg btn-primary' %>
 		</div>
 		<hr class="col-xs-8 col-xs-offset-2">
-		<br class="clr" />
+		<br class="clr" / >
 	<% end %>
 
 	<h1>What I'm Teaching</h1>
@@ -33,5 +33,7 @@
 		<div class="col-xs-12 col-sm-4 text-center">
 			<%= link_to "More Info...", course_path(course), class: 'btn btn-lg btn-primary' %>
 		</div>
+		<hr class="col-xs-8 col-xs-offset-2">
+		<br class="clr" / >
 	<% end %>
 </div> 
