--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -20,13 +20,41 @@ body {
 #footer {
   height: $footer-height;
   color: white;
-  background-color:  rgba(101, 103, 125, 0.7);
+  background-color:  rgba(101, 103, 125, 0.8);
   font-family: "Helvetica Neue", Helvetica;
   padding: 10px 0px;
   margin-top: 30px;
+  font-weight: 100;
 }
 
 #footer a {
 	color: white;
 	font-weight: 100;
+}
+
+.social-button {
+  width: 32px;
+  margin: 4px;
+}
+
+.social a:hover {
+  text-decoration: none;
+}
+
+$footer-height-mobile: 200px;
+@media (max-width: 750px) {
+  #footer {
+    height:$footer-height-mobile;
+  }
+
+  #wrap {
+    margin: 0 auto -$footer-height-mobile;
+    /* Pad bottom by footer height */
+    padding: 0 0 $footer-height-mobile;
+  }
+
+  #footer .social {
+    margin-top: 10px;
+  }
+
 }
