--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -51,7 +51,7 @@
 	border: 1px solid #ccc;
 	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
 	padding: 10px;
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 }
 
 .booyah-box h2, .booyah-box h1 {
@@ -123,6 +123,7 @@
 body {
 	background: url('polaroid.png');
 	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+	/*color: white;*/
 }
 
 h1, h2, h3, h4, h5, h6, .navbar {
