--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,9 +9,6 @@
 		<br />
 		<%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
 		<br /><br />
-	</div>
-
-	<div class="col-xs-10 col-xs-offset-1 features text-center">
 		<div class="col-sm-4">
 			<h3>Feature 1</h3>
 		</div>
@@ -23,5 +20,19 @@
 		<div class="col-sm-4">
 			<h3>Feature 3</h3>
 		</div>
+	</div>
 
+	<!-- <div class="col-xs-10 col-xs-offset-1 features text-center">
+		<div class="col-sm-4">
+			<h3>Feature 1</h3>
+		</div>
+
+		<div class="col-sm-4">
+			<h3>Feature 2</h3>
+		</div>
+
+		<div class="col-sm-4">
+			<h3>Feature 3</h3>
+		</div>
+	</div> -->
 </div>
