--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,22 +3,22 @@
 
 	<div class="frosty col-xs-10 col-xs-offset-1 text-center">
 		<br />
-		<h1>Course Title goes here</h1>
+		<h1>Launch Your Own Online Courses</h1>
 		<br />
-		<h2>description of course here</h2>
+		<h2>Aspiring Teacher? Get Started Today!</h2>
 		<br />
 		<%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
 		<br /><br />
 		<div class="col-sm-4">
-			<h3>Feature 1</h3>
+			<h3>Quickly create your courses</h3>
 		</div>
 
 		<div class="col-sm-4">
-			<h3>Feature 2</h3>
+			<h3>Upload your tutorial videos</h3>
 		</div>
 
 		<div class="col-sm-4">
-			<h3>Feature 3</h3>
+			<h3>Stripe payment processing</h3>
 		</div>
 	</div>
 
